--- a/melodic/lcas-dist.yaml
+++ b/melodic/lcas-dist.yaml
@@ -911,6 +911,14 @@ repositories:
       url: https://github.com/SAGARobotics/Thorvald.git
       version: melodic-devel
     status: developed
+  topic_compression:
+    source:
+      test_commits: true
+      test_pull_requests: true
+      type: git
+      url: https://github.com/LCAS/topic_compression.git
+      version: main
+    status: developed
   topic_store:
     release:
       tags:
