--- a/melodic/lcas-dist.yaml
+++ b/melodic/lcas-dist.yaml
@@ -932,9 +932,9 @@ repositories:
       version: 0.1.8-1
     source:
       test_commits: true
-      test_pull_requests: false
+      test_pull_requests: true
       type: git
-      url: https://github.com/RaymondKirk/topic_store.git
+      url: https://github.com/LCAS/topic_store.git
       version: master
     status: developed
   topological_navigation:
